--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ xssinspector (1.0-1) stable; urgency=medium
 
   * Initial release.
 
- --  <>  Sat, 03 Jan 2026 16:33:18 +0000
+ -- theycallmeibra <ibrahimmammedov7@gmail.com>  Sat, 03 Jan 2026 16:38:55 +0000
